--- a/style.css
+++ b/style.css
@@ -36,4 +36,11 @@ body {
 }
 .kartu-nama .kontak a:hover {
     text-decoration: underline;
+}.foto-profil {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px;
 }
+
