--- a/style.css
+++ b/style.css
@@ -10,9 +10,8 @@ body {
 
 .nametag {
     display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    width: 400px;
+    align-items: center;
+    width: 500px;
     background: #ffffff;
     border: 2px solid #ddd;
     border-radius: 15px;
@@ -22,10 +21,8 @@ body {
 }
 
 .foto-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: 15px;
+    flex: 0 0 100px;
+    margin-right: 15px;
 }
 
 .foto-profil {
@@ -36,14 +33,20 @@ body {
     border: 2px solid #ccc;
 }
 
+.content-container {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+}
+
 .info-container {
-    width: 100%;
-    text-align: center;
+    flex: 1;
+    margin-right: 20px;
 }
 
 .info-container h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 20px;
     color: #333;
 }
 
@@ -73,8 +76,9 @@ body {
 }
 
 .qr-container {
-    margin-top: 20px;
+    flex: 0 0 100px;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
